# GROR

./: CMakeLists.txt  README.md
include/: gror_pre.h  ia_gror.h  ia_gror.hpp
src/: gror_common.h  gror_pre.cpp  main.cpp
